Fixed a minor issue with the way some elements were aligned

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ header {
   color: white;
   height: 1em;
   position: relative;
-  top: 0.5em;
 }
 
 header > p {
@@ -67,6 +66,10 @@ h1 {
 
 #sighting-info > h3 {
   margin: 0;
+}
+
+#sighting-info > p {
+  max-width: 300px;
 }
 
 .form {
